src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/WGLARBExtensionsString_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLARBExtensionsString_StringErrorContext.class */
public final class WGLARBExtensionsString_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nwglGetExtensionsStringARB(J)J", "net/labymod/core/laby3d/opengl/error/generated/WGLARBExtensionsStringErrorContext");
        methods.put("wglGetExtensionsStringARB(J)Ljava/lang/String;", "net/labymod/core/laby3d/opengl/error/generated/WGLARBExtensionsStringErrorContext");
        return methods;
    }
}
